Main changes: refactoring, add implementation for 'delete' action

--- a/src/main/resources/templates/admin/category_list.html
+++ b/src/main/resources/templates/admin/category_list.html
@@ -64,7 +64,7 @@
 <script>
     function deleteCategory(categoryId) {
         if (confirm("Czy jestes pewny ? Jeżeli się zgodzisz kategoria z '" + categoryId + "' id zostanie usunięte")) {
-            window.location = '../admin/category/deleteCategory?id=' + categoryId;
+            window.location = '/admin/category/deleteCategory?id=' + categoryId;
         }
     }
 </script>
