--- a/src/main/resources/templates/admin/customer_view.html
+++ b/src/main/resources/templates/admin/customer_view.html
@@ -95,7 +95,7 @@
 <script>
     function deleteCustomer(customerId) {
         if (confirm("Czy jestes pewny ? Jeżeli się zgodzisz klient z '" + customerId + "' id zostanie usunięty")) {
-            window.location = '../admin/customer/deleteCustomer?id=' + customerId;
+            window.location = '/admin/customer/deleteCustomer?id=' + customerId;
         }
     }
 </script>
