--- a/src/main/resources/templates/admin/manufacturer_list.html
+++ b/src/main/resources/templates/admin/manufacturer_list.html
@@ -71,7 +71,7 @@
 <script>
     function deleteManufacturer(userId) {
         if (confirm("Are you sure ? If you agree manufacturer with '" + userId + "' id will be deleted")) {
-            window.location = '../admin/manufacturer/deleteManufacturer?id=' + userId;
+            window.location = '/admin/manufacturer/deleteManufacturer?id=' + userId;
         }
     }
 </script>
