--- a/src/main/resources/templates/admin/order_list.html
+++ b/src/main/resources/templates/admin/order_list.html
@@ -69,7 +69,7 @@
         if (confirm("Czy jestes pewny ? Jeżeli się zgodzisz zamówienie z '" + orderId + "' id oraz powiązane z " +
             "nim informację zostaną usunięte")) {
 
-            window.location = '../admin/deleteOrder?id=' + orderId;
+            window.location = '/admin/deleteOrder?id=' + orderId;
         }
     }
 </script>
