--- a/src/main/resources/templates/admin/user_list.html
+++ b/src/main/resources/templates/admin/user_list.html
@@ -66,7 +66,7 @@
 <script>
     function deleteUser(userId) {
         if (confirm("Czy jestes pewny ? Jeżeli się zgodzisz użytkownik z '" + userId + "' id zostanie usunięty")) {
-            window.location = '../admin/user/deleteUser?id=' + userId;
+            window.location = '/admin/user/deleteUser?id=' + userId;
         }
     }
 </script>
