Main changes: implement search field for administrator and users

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -32,8 +32,8 @@
                     </a>
                 </div>
                 <div class="displayFlex justifyContentSpaceBetween positionMarker">
-                    <form class="search" th:action="@{/admin/search}">
-                        <input type="text" placeholder="Szukaj.." name="search" size="60"
+                    <form class="searchForm" th:action="@{/admin/search}">
+                        <input type="text" placeholder="Szukaj.." name="searchBy" size="60"
                                class="fontWeightRevert borderRadius15MinHeight35MaxHeight35 borderColorRgba109163207099">
                         <button type="submit" class="borderRadius15MinHeight35MaxHeight35">Szukaj</button>
                     </form>
