--- a/src/main/resources/templates/homepage/header.html
+++ b/src/main/resources/templates/homepage/header.html
@@ -33,8 +33,8 @@
                     </a>
                 </div>
                 <div class="displayFlex justifyContentSpaceBetween positionRelative" style="margin-top: 10px">
-                    <form class="searchForm" th:action="@{/search}">
-                        <input type="text" placeholder="Szukaj.." name="search" size="60"
+                    <form class="searchForm" th:action="@{/homepage/search}">
+                        <input type="text" placeholder="Szukaj.." name="searchBy" size="60"
                                class="fontWeightRevertBorRad15MinH35MaxH35BorCol109163207099">
                         <button type="submit" class="borderRadius15MinHeight35MaxHeight35">Szukaj</button>
                     </form>
