Main changes: add implementation for review and simple security (for now in memory) - add ReviewController - add ReviewServices - add WebSecurityConfig - update Review - update CustomerRepo - update html files - update pom file

--- a/src/main/resources/templates/admin/customerCreateOrUpdate.html
+++ b/src/main/resources/templates/admin/customerCreateOrUpdate.html
@@ -115,14 +115,13 @@
             return false;
         }
 
-        // TODO
-        // <c:if test="${customer == null}">
+        /*[# th:if="${customer == null}"]*/
         if (password.value.length == 0) {
             alert("Hasło jest wymagane");
             password.focus();
             return false;
         }
-        // </c:if>
+        /*[/]*/
 
         if (firstName.value.length == 0) {
             alert("Imię jest wymagane");
