--- a/src/main/resources/templates/admin/reviewCreateOrUpdate.html
+++ b/src/main/resources/templates/admin/reviewCreateOrUpdate.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="pl-PL">
+<html xmlns:th="http://www.thymeleaf.org"
+      lang="pl-PL">
 
 <head>
     <div th:replace="general/headAndScripts :: head"/>
@@ -101,14 +102,13 @@
             return false;
         }
 
-        // TODO
-        // <c:if test="${customer == null}">
+        /*[# th:if="${customer == null}"]*/
         if (password.value.length == 0) {
             alert("Hasło jest wymagane");
             password.focus();
             return false;
         }
-        // </c:if>
+        /*[/]*/
 
         if (firstName.value.length == 0) {
             alert("Imię jest wymagane");
