--- a/src/main/resources/templates/homepage/footer.html
+++ b/src/main/resources/templates/homepage/footer.html
@@ -8,12 +8,12 @@
                 <h7>ZAPISZ SIĘ DO NEWSLETTERA</h7>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted">
-                        <form action="#" th:action="@{/}" th:method="post">
+                        <!--<form action="#" th:action="@{/}" th:method="post">-->
                             <input type="text" name="nazwa" placeholder="Twój adres email*" size="30"
                                    class="borderRadius5MinHeight30MaxHeight35BorderColor109163207099">
                             <input type="submit" value="Wyślij"
                                    class="borderRadius5MinHeight30MaxHeight35">
-                        </form>
+                        <!--</form>-->
                     </a></li>
                     <li class="text-muted">* Możesz zrezygnować w każdej chwili. W tym celu należy odnaleźć
                         szczegóły w naszej informacji prawnej.
