--- a/src/main/resources/templates/homepage/equipment_view.html
+++ b/src/main/resources/templates/homepage/equipment_view.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="marginBottom40TextAlignCenter">
-                    <a th:href="@{addToShoppingCart(eqm=${equipment.id})}">
+                    <a th:href="@{/homepage/shoppingCart/addToShoppingCart(eqmId=${equipment.id})}">
                         <button type="button" class="btn btn-primary" id="cancel">
                             DODAJ DO KOSZYKA
                         </button>
